--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           </div>
         </div>
         <div class="testimonial-text-container">
+          <img class="quotes-pattern" src="images/pattern-quotes.svg">
           <p class="testimonial-p">
             “ If you want to lay the best foundation possible I’d recommend taking this course. 
             The depth the instructors go into is incredible. I now feel so confident about 
